objects/AOPS_Contact_Ship_Address__c.object
<CustomObject>
    <fields>
        <fullName>CCU310F_ADDR_SEQ__c</fullName>
        <label>Address Seq</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_ALLOW_BUY__c</fullName>
        <label>Allowed to Buy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_BRAND__c</fullName>
        <label>Brand Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_CONTACT_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_CUSTOMER_ID__c</fullName>
        <label>Customer ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_DFT_SHIP_CONT__c</fullName>
        <label>Default Ship Contact</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_UPDATE_BY__c</fullName>
        <label>Update By</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCU310F_UPDATE_DT__c</fullName>
        <label>Update Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTS_ACTION__c</fullName>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTS_AOPS_KEY1__c</fullName>
        <label>AOPS KEY1 Account/Prospect</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTS_AOPS_KEY2__c</fullName>
        <label>AOPS KEY2 Address/Contact</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTS_AOPS_KEY3__c</fullName>
        <label>AOPS KEY3 Contact point/...</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTS_MSG_TYPE__c</fullName>
        <label>CXTCNTS_MSG_TYPE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXTCNTS_TIMESTAMP__c</fullName>
        <label>DB TIMESTAMP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <label>Number Of Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SYNC_STATUS_MESSAGE__c</fullName>
        <externalId>true</externalId>
        <label>SYNC STATUS MESSAGE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AOPS Contact Ship Address</label>
    <nameField>
        <label>AOPS Contact Ship Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AOPS Contact Ship Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>